@@ -566,6 +566,8 @@ public:
 
     bool hasSameDirectionAs(const RenderBox* object) const { return style()->direction() == object->style()->direction(); }
 
+    virtual void reportMemoryUsage(MemoryObjectInfo*) const OVERRIDE;
+
 protected:
     virtual void willBeDestroyed();
 
@@ -600,8 +602,6 @@ protected:
 
     RenderObject* splitAnonymousBoxesAroundChild(RenderObject* beforeChild);
  
-    virtual void reportMemoryUsage(MemoryObjectInfo*) const OVERRIDE;
-
 private:
     bool fixedElementLaysOutRelativeToFrame(Frame*, FrameView*) const;
 
